--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Johnsen family tree
-repo_url: https://github.com/thomiz/test-IG/family-tree
-repo_name: thomiz/test-IG/family-tree
+repo_url: https://github.com/thomiz/johnsen-family
+repo_name: thomiz/johnsen-family
 site_author: Thomas T Rsoenlund
 nav:
     - Johnsen: 
