--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Johnsen family tree
 repo_url: https://github.com/thomiz/johnsen-family
 repo_name: thomiz/johnsen-family
-site_author: Thomas T Rsoenlund
+site_author: Thomas T Rosenlund
 nav:
     - Johnsen: 'index.md'
     - Wiese: 'wiese-grenen.md'
