--- a/.github/workflows/generate-plantuml.yml
+++ b/.github/workflows/generate-plantuml.yml
@@ -1,4 +1,4 @@
-name: generate plantuml
+name: generate-plantuml
 
 on: 
   workflow_dispatch:
@@ -6,6 +6,8 @@ on:
 jobs:
   generate_plantuml:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     name: plantuml
     steps:
     - name: checkout
@@ -16,7 +18,7 @@ jobs:
       id: plantuml
       uses: grassedge/generate-plantuml-action@v1.5
       with:
-        path: .
+        path: svg
         message: "Render PlantUML files"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
